--- a/Blog/app/views/posts/new.html.erb
+++ b/Blog/app/views/posts/new.html.erb
@@ -1,18 +1,18 @@
 <h1>Yeni Gönderi Sayfası</h1><p>
 
-<%= form_for :post do |f| %> 
+<%= form_for :post, url: posts_path do |f| %> 
   <p> 
-    <%= f.label :title %><br>
+    <%= f.label :Gönderici  %><br>
     <%= f.text_field :title %> 
   </p> 
   
   <p> 
-    <%= f.label :text %><br>
+    <%= f.label :Gönderi %><br>
     <%= f.text_area :text %> 
   </p> 
   
   <p> 
-    <%= f.submit %> 
+    <%= f.submit :Gönder%> 
   </p>
 <% end %>
 
