Welcome sayfasına post sayfası için linkler koyuldu

--- a/Blog/app/views/welcome/index.html.erb
+++ b/Blog/app/views/welcome/index.html.erb
@@ -1,1 +1,4 @@
 <h1> HOŞGELDİNİZ <h1>
+
+<h4><%= link_to "Tüm Gönderiler", controller: "posts" %><h4>
+<h4><%= link_to "Yeni Gönderi", new_post_path %>
