posts/index sayfası için göster ve güncelle linkleri eklendi

--- a/Blog/app/views/posts/show.html.erb
+++ b/Blog/app/views/posts/show.html.erb
@@ -5,4 +5,5 @@
 <p>
   <strong>Gönderi:</strong> 
   <%= @post.text %></p>
-
+<%= link_to 'Geri', posts_path %> | 
+<%= link_to "Düzenle", edit_post_path(@post)%>
