--- a/Blog/app/views/posts/edit.html.erb
+++ b/Blog/app/views/posts/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Yeni Gönderi Sayfası</h1><p>
-
-<%= form_for :post, url: posts_path do |f| %>
+<h1>Editing post</h1>
+ 
+<%= form_for :post, url: post_path(@post), method: :patch do |f| %>
   <% if @post.errors.any? %>
   <div id="error_explanation">
     <h2><%= pluralize(@post.errors.count, "error") %> prohibited
