girilen postların silineblimesi için index sayfasına link oluşturuldu, controller sayfası düzenlendi

--- a/Blog/app/views/posts/index.html.erb
+++ b/Blog/app/views/posts/index.html.erb
@@ -12,6 +12,9 @@
       <td><%= post.text %></td>
       <td><%= link_to "Göster", post %><td>
       <td><%= link_to "Düzenle", edit_post_path(post) %><td>
+      <td><%= link_to 'Sil', post_path(post),
+              method: :delete,
+              data: { confirm: 'Silmek istediğinizden emin misiniz?' } %></td>
     </tr> 
   <% end %> 
 </table>
