--- a/Blog/app/views/posts/edit.html.erb
+++ b/Blog/app/views/posts/edit.html.erb
@@ -1,30 +1,41 @@
-<h1>Editing post</h1>
- 
-<%= form_for :post, url: post_path(@post), method: :patch do |f| %>
-  <% if @post.errors.any? %>
-  <div id="error_explanation">
-    <h2><%= pluralize(@post.errors.count, "error") %> prohibited
-      this post from being saved:</h2>
-    <ul>
-    <% @post.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-    </ul>
-  </div>
-  <% end %>
-  <p>
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </p>
- 
-  <p>
-    <%= f.label :text %><br>
-    <%= f.text_area :text %>
-  </p>
- 
-  <p>
-    <%= f.submit %>
-  </p>
-<% end %>
- 
+<!DOCTYPE html>
+<html>
+<head>
+<style type="text/css">
+
+body.b{
+    background-color: rgba(18,89,199,0.2);
+    padding: 50px;
+}
+
+a:link, a:visited {
+    background-color: #4CAF50;
+    color: black;
+    text-align: center; 
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 10px 10px 10px 10px;  
+    width: 5.5%;
+    padding: 14px 20px;
+}
+
+a:hover, a:active {
+    background-color: #45a049;
+}
+
+</style>
+</head>
+<body class="b">
+
+
+<h1> Gönderi Düzenleme</h1>
+
+<%= render 'form' %> 
+
+<p class="floating-box">
 <%= link_to 'Back', posts_path %>
+</p>
+
+
+</body>
+</html>
