--- a/Blog/app/views/posts/edit.html.erb
+++ b/Blog/app/views/posts/edit.html.erb
@@ -33,7 +33,7 @@ a:hover, a:active {
 <%= render 'form' %> 
 
 <p class="floating-box">
-<%= link_to 'Back', posts_path %>
+<%= link_to 'Geri', posts_path %>
 </p>
 
 
